--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,12 @@
 [submodule "gamify-food-intake-tracker"]
 	path = gamify-food-intake-tracker
 	url = git@github.com:EmmanuelOluwafemi/gamify-food-intake-tracker.git
+[submodule "spl-token"]
+	path = spl-token
+	url = git@github.com:EmmanuelOluwafemi/spl-token.git
+[submodule "anchor-vault"]
+	path = anchor-vault
+	url = git@github.com:EmmanuelOluwafemi/anchor-vault.git
+[submodule "Rustlings"]
+	path = Rustlings
+	url = https://github.com/EmmanuelOluwafemi/Rustlings
